- Added : Configuration options to turn on or off and configure the Multilanguage on the site (malanciault)
- Added : Integrating some flags image to be used by the multilanguage feature (malanicault)
- Added : A system block to allow users to select their language (real_therplima)

- Changed : The icons of /class/xoopseditor/dhtmlext/images/*.* (sato-san)
- Changed : Theme changes; Link to impressCMS, poweredby.gif (sato-san)
- Changed : Theme image; logo.png with impressCMS-Logo (sato-san)
- Changed : resource.db.php - changed for version by GiJoe (Andrew Vincent)
- Changed : Picture/Icon for impressCMS: icon_big.png (sato-san)
- Changed : Picture/Icon for impressCMS: icon_small.png (sato-san)
- Changed : Picture/Icon for impressCMS: logo.gif (sato-san)
- Changed : Picture/Icon for impressCMS: poweredby.gif (sato-san)
- Changed : Picture/Icon for impressCMS: poweredby.jpg (sato-san)
- Changed : Picture/Icon for impressCMS: s_poweredby.gif (sato-san)

- Removed : The 'Default' theme has been removed (malanciault)

- Improved : When the User registration is Off... all links to register.php are not shown.
- Improved : The 'remember me' feature now can be enable and disabled (young-pee)
- Improved : Changing the Config options container from 60% to 50% #1849876 (malanciault)
- Improved : Auth Class Folder Organization. (young-pee)
- Improved : Database Class Folder Organization. (Needed for include more drivers) (young-pee)

- Fixed #1854703 : mainfile.php was filled #213  (sato-san)
- Fixed #1851636 : Corrected error in profile administration in the admin side. (young-pee)
- Fixed #1852655 : Gzip warning in admin side. (young-pee)
- Fixed #1854527 : Corrected error updating user profile. (young-pee)
- Fixed Corrected a hardcoded route to the smarty classes. (young-pee)
- Fixed system templates corrected for validation, added title attributes to links and filled alt attributes for images. (skenow|kris_fr)